# nsg

./: README.md
android/: impl-plan.md  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
doc/: android-poc.md  nikon-z-gps.md
esp32/: .gitignore  CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.debug  sdkconfig.defaults.release
esp32/components/blowfish/: CMakeLists.txt  blowfish.c
esp32/components/nikon-protocol/: BlowfishHasher.h  CMakeLists.txt  GeoMessage.h  NikonPairingEngine.h  PairingMessage.cpp  PairingMessage.h
esp32/components/random/: CMakeLists.txt  Esp32RandomGenerator.cpp  Esp32RandomGenerator.h  RandomGenerator.h
esp32/components/utils/: CMakeLists.txt
esp32/main/: BootMode.cpp  CMakeLists.txt  Config.cpp  Config.h  Logging.cpp  Logging.h  idf_component.yml  main.cpp
esp32/main/common/: NikonBLEClient.cpp  NikonBLEClient.h  ScannedCamera.h
esp32/main/normal/: ConnectedCamera.cpp  ConnectedCamera.h  NormalMode.cpp  PairedScanner.cpp  PairedScanner.h
esp32/main/pairing/: ClassicBT.cpp  ClassicBT.h  PairingMode.cpp  PairingMode.h  PairingScanner.cpp  PairingScanner.h
kotlin-poc/: build.gradle.kts  settings.gradle.kts
kotlin-poc/gradle/wrapper/: gradle-wrapper.properties
m5stack-core2/: .gitignore  README.md  platformio.ini
m5stack-core2/lib/blowfish/: blowfish.h
m5stack-core2/lib/nikon-protocol/: BlowfishHasher.cpp  BlowfishHasher.h  GeoMessage.cpp  GeoMessage.h  NikonPairingEngine.h  (+6 more)
m5stack-core2/src/: BootMode.cpp  BootMode.h  Config.cpp  Config.h  Logging.cpp  Logging.h  main.cpp
(+72 files in other folders)
